# EasyFUSE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ezbuild.sh  fuse_fs_open.c  fuse_fs_open.h  ulinktest.c  ult.out
demo/: disk  disk.c  diskimg
demo1/: global.h  init_disk.c  makefile  u_fs.c  utils.c  utils.h
doc/: analysis.md  architecture.md  libfuse_detail.md  mechanism.md  reference.md  timeline.md
include/: block_cache.h  disk.h  fs.h  fuse_fs_calls.h  fuse_fs_open.h  fuse_fs_stat.h  inode.h  inode_cache.h  log.h  userspace_fs_calls.h  util.h
libfuse_example/: hello  hello.c
src/: block_cache.c  block_cache.h  disk.c  disk.h  fs.c  fs.h  fuse_fs_init.c  fuse_fs_open.c  fuse_fs_stat.c  init_disk  init_disk.c  inode.c  inode.h  inode_cache.c  inode_cache.h  log.c  main  main.c  stat.c  stat.h  userspace_fs_create.c  userspace_fs_mkdir.c  userspace_fs_open.c  userspace_fs_readdir.c  userspace_fs_readir.c  userspace_fs_rmdir.c  userspace_fs_stat.c  userspace_fs_ulink.c  userspace_fs_unlink.c  util.c  util.h
src/syscalls/: userspace_fs_create.c  userspace_fs_init.c  userspace_fs_link.c  userspace_fs_mkdir.c  userspace_fs_open.c  userspace_fs_read.c  userspace_fs_readdir.c  userspace_fs_readlink.c  userspace_fs_rename.c  userspace_fs_rmdir.c  userspace_fs_stat.c  userspace_fs_symlink.c  userspace_fs_truncate.c  userspace_fs_unlink.c  userspace_fs_write.c  userspace_read.c  userspace_write.c
test/: create.c  test_create.c
tests/: a.out  rw  rw_test.c  write_test.c
